feature: CRUD Products: - Add image handling package (intervention/image) - Update logging config to daily - Fixing detail response - Add image helper - Add CRUD products - Add image plugins for docker
