# app/Models/Product.php
@@ -3,6 +3,7 @@
 namespace App\Models;
 
 use Illuminate\Database\Eloquent\Relations\BelongsToMany;
+use Illuminate\Database\Eloquent\Relations\HasMany;
 
 class Product extends BaseModel
 {
@@ -39,5 +40,21 @@ class Product extends BaseModel
     public function images(): BelongsToMany
     {
         return $this->belongsToMany(Image::class, ProductImage::getTableName());
+    }
+
+    /**
+     * Relation to category products
+     */
+    public function categoryProducts(): HasMany
+    {
+        return $this->hasMany(CategoryProduct::class);
+    }
+
+    /**
+     * Relation to product images
+     */
+    public function productImages(): HasMany
+    {
+        return $this->hasMany(ProductImage::class);
     }
 }
