# routes/api.php
@@ -19,11 +19,21 @@ use Illuminate\Support\Facades\Route;
 // });
 
 Route::prefix('v1')->name('v1.')->namespace('Api\\V1')->group(function () {
+    // Categories
     Route::controller('CategoryController')->prefix('categories')->name('categories.')->group(function () {
         Route::get('', 'index')->name('index');
         Route::post('', 'store')->name('store');
         Route::get('{id}', 'show')->name('show');
         Route::put('{id}', 'update')->name('update');
+        Route::delete('{id}', 'destroy')->name('destroy');
+    });
+
+    // Products
+    Route::controller('ProductController')->prefix('products')->name('products.')->group(function () {
+        Route::get('', 'index')->name('index');
+        Route::post('', 'store')->name('store');
+        Route::get('{id}', 'show')->name('show');
+        Route::post('{id}', 'update')->name('update');
         Route::delete('{id}', 'destroy')->name('destroy');
     });
 });
